AD_A1_8: Fixes in header for center alignment and pixel perfection fixes

--- a/src/styles/layouts/_features.scss
+++ b/src/styles/layouts/_features.scss
@@ -6,8 +6,8 @@
     &__container {
         @include flex($direction: column);
         gap: 10.8rem;
-        padding-top: 2.8rem;
-        padding-bottom: 2.8rem;
+        padding-top: 5.4rem;
+        padding-bottom: 5.4rem;
 
         @include media(md) {
             padding-top: 4.2rem;
@@ -72,6 +72,7 @@
 
         @include media(md) {
             gap: 0.4rem;
+            align-items: flex-start;
         }
 
         @include media(lg) {
@@ -82,8 +83,8 @@
     &__card {
         @include flex($direction: column, $align: flex-start);
         gap: 3.2rem;
-        width: 100%;
-        padding: 3.2rem 6.4rem;
+        width: 85%;
+        padding: 3.2rem;
         border-radius: 3.2rem;
 
         &:nth-child(1) {
@@ -110,6 +111,7 @@
             flex-direction: row;
             justify-content: flex-start;
             align-items: center;
+            width: 100%;
             padding: 3rem 1.6rem;
         }
     }
