--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -18,7 +18,7 @@
         @include flex($justify: space-between, $direction: row-reverse);
         position: relative;
         padding-top: 3.8rem;
-        padding-bottom: 0.4rem;
+        padding-bottom: 3.2rem;
 
         @include media(md) {
             flex-direction: row; // Tablet: hamburger on left
@@ -26,10 +26,10 @@
         }
 
         @include media(lg) {
-            padding: 4.2rem 12.4rem;
+            padding: 1.2rem 12.4rem;
             transition: padding 0.3s ease;
             body.scrolled & {
-                padding: 2.4rem 13rem 0.4rem 13rem;
+                padding: 0 13rem 0 13rem;
             }
         }
     }
@@ -57,6 +57,7 @@
         background: none;
         border: none;
         display: block;
+        cursor: pointer;
 
         @include media(lg) {
             display: none; // Hidden on desktop
@@ -90,6 +91,8 @@
 
         @include media(md) {
             left: -100%;
+            top: 11.6rem;
+            height: calc(100vh - 11.6rem);
             right: auto;
             max-width: 50%;
             transition: left 0.3s ease;
@@ -115,7 +118,6 @@
     &__nav-list {
         display: flex;
         flex-direction: column;
-        gap: 4rem;
         padding: 4rem 6rem;
 
         @include media(lg) {
@@ -127,6 +129,9 @@
     }
 
     &__nav-link {
+        display: block;
+        width: 100%;
+        padding: 3.2rem 0;
         font-weight: $font-bold;
         color: rgba($color-grey, 0.5);
 
@@ -140,7 +145,7 @@
         &--mobile {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
+            gap: 2rem;
             margin-top: 2rem;
 
             @include media(md) {
